[package]
name = "emit_web"
version = "0.2.0"
authors = ["emit contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emit-rs/emit_web"
description = "Instrument Web-based applications using emit."
keywords = ["observability", "wasm", "web"]
categories = ["development-tools::debugging"]
edition = "2021"
exclude = ["asset"]

[dependencies.emit]
version = "1"
default-features = false
features = ["serde"]

[dependencies.serde]
version = "1"
default-features = false

[dependencies.wasm-bindgen]
version = "0.2"
default-features = false

[dependencies.js-sys]
version = "0.3"
default-features = false

[dev-dependencies.wasm-bindgen]
version = "0.2"

[dev-dependencies.emit]
version = "1"
features = ["serde"]

[dev-dependencies.wasm-bindgen-test]
version = "0.3"

[workspace]
members = [
    "example",
]
