[package]
name = "emit_web_example"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.emit]
version = "1"

[dependencies.emit_web]
path = "../"

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.console_error_panic_hook]
version = "0.1"
